# cgal-examples

./: CMakeLists.txt  Dockerfile  Makefile  README.md
inc/CGAL/Qt/: ui_ImageInterface.h
mwe/: compute-convex-hull-of-polygon.cpp  draw-multiple-polygons.cpp  draw-one-polygon.cpp
